--- a/main.css
+++ b/main.css
@@ -1,40 +1,50 @@
-.cube {
-  position: relative;
-  height: 50%;
-  width: calc((100% - (var(--n) - 1) * 5px) / var(--n));
-  background-color: #000;
-  transform-style: preserve-3d;
-  border-right: 1px solid #222;
-  transform: rotateX(0deg) translateY(0) perspective(750px);
-  animation: flow 1.5s ease-in-out calc(-0.125s * var(--i)) infinite alternate; }
-  .cube:after {
-    content: "";
-    display: block;
-    height: 100%;
-    background-color: #222;
-    border-right: 1px solid #333;
-    transform-origin: right top;
-    transform: rotateX(-90deg); }
-
-@keyframes flow {
-  to {
-    border-color: transparent;
-    transform: rotateX(-10deg) translateY(85%) perspective(0px); } }
-
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: none;
-  box-sizing: border-box; }
-
 body {
-  background-color: #111;
-  background: linear-gradient(#2b2b2e, #111);
-  display: flex;
   height: 100vh;
-  justify-content: space-between;
-  align-items: flex-end;
-  box-shadow: inset 0 -100px 75px -25px rgba(255, 0, 0, 0.125);
-  overflow: hidden; }
+  perspective: 25em; }
+
+[class*="cube"] {
+  position: absolute; }
+
+.cube {
+  font-size: 8vmin;
+  top: 50%;
+  left: 50%;
+  transform-style: preserve-3d;
+  font: 8vmin / 4em cookie, cursive;
+  text-align: center; }
+  .cube__face {
+    margin: -2em;
+    width: 4em;
+    height: 4em;
+    box-shadow: 0 0 0 2px;
+    --i: 0;
+    transform: rotate3d(var(--i), calc(1 - var(--i)), 0, calc(var(--m, 0) * 90deg)) translateZ(2em); }
+    .cube__face:nth-child(n + 5) {
+      --i: 1;
+      --j: 0; }
+
+.cube__face:nth-child(n + 5) {
+  --i: 1; }
+
+.cube__face:nth-child(2) {
+  --m: 1; }
+
+.cube__face:nth-child(3) {
+  --m: 2; }
+
+.cube__face:nth-child(4) {
+  --m: 3; }
+
+.cube__face:nth-child(5) {
+  --m: 1; }
+
+.cube__face:nth-child(6) {
+  --m: -1; }
+
+.cube {
+  animation: ani 8s ease-in-out infinite; }
+
+@keyframes ani {
+  to {
+    transform: rotate3d(1, 1, 1, 1turn) rotate3d(1, -1, 1, 1turn); } }
 
