--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,7 @@
 - var txt = ['react', 'vue', 'angular', 'pug', 'scss', 'webpack'];
+- var num = ['6', '5', '4', '3', '2', '1'];
 - var n = txt.length;
 
 .cube
   while n--
-    .cube__face #{txt[n]}
+    .cube__face #{num[n]}
