--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  perspective: 25em; }
+  background-color: #1e2428; }
 
 [class*="cube"] {
   position: absolute; }
@@ -10,36 +10,65 @@ body {
   top: 50%;
   left: 50%;
   transform-style: preserve-3d;
-  font: 8vmin / 4em cookie, cursive;
+  font: 8vmin / 2em cookie, cursive;
   text-align: center; }
   .cube__face {
-    margin: -2em;
-    width: 4em;
-    height: 4em;
-    box-shadow: 0 0 0 2px;
+    margin: -1em;
+    width: 2em;
+    height: 2em;
+    box-shadow: 0 0 0 2px; }
+
+.react {
+  top: 50%;
+  left: 50%; }
+
+.angular {
+  top: 50%;
+  left: 30%; }
+
+.vue {
+  top: 50%;
+  left: 70%; }
+
+.angular .cube__face {
+  background-color: rgba(221, 0, 49, 0.8);
+  box-shadow: #dd0031 0px 0px 150px; }
+
+.vue .cube__face {
+  background-color: rgba(65, 184, 131, 0.8);
+  box-shadow: #41b883 0px 0px 150px; }
+
+.cube__face {
+  transform: rotate3d(var(--i), var(--j), 0, calc(var(--m) * 90deg)) translateZ(1em);
+  box-shadow: #61dafb 0 0 1.2em;
+  background-color: rgba(97, 218, 251, 0.8);
+  border-width: 2.42857px;
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0.4); }
+  .cube__face:nth-child(1) {
     --i: 0;
-    transform: rotate3d(var(--i), calc(1 - var(--i)), 0, calc(var(--m, 0) * 90deg)) translateZ(2em); }
-    .cube__face:nth-child(n + 5) {
-      --i: 1;
-      --j: 0; }
-
-.cube__face:nth-child(n + 5) {
-  --i: 1; }
-
-.cube__face:nth-child(2) {
-  --m: 1; }
-
-.cube__face:nth-child(3) {
-  --m: 2; }
-
-.cube__face:nth-child(4) {
-  --m: 3; }
-
-.cube__face:nth-child(5) {
-  --m: 1; }
-
-.cube__face:nth-child(6) {
-  --m: -1; }
+    --j: 1;
+    --m: 0; }
+  .cube__face:nth-child(2) {
+    --i: 0;
+    --j: 1;
+    --m: 1; }
+  .cube__face:nth-child(3) {
+    --i: 0;
+    --j: 1;
+    --m: 2; }
+  .cube__face:nth-child(4) {
+    --i: 0;
+    --j: 1;
+    --m: 3; }
+  .cube__face:nth-child(5) {
+    --i: 1;
+    --j: 0;
+    --m: 1; }
+  .cube__face:nth-child(6) {
+    --i: 1;
+    --j: 0;
+    --m: -1; }
 
 .cube {
   animation: ani 8s ease-in-out infinite; }
