--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,7 @@
   while num--
     - n = 6;
     div(class="cube "+cubeList[num])
-      while n--
-        .cube__face 
+      div(class="cube__wrapper")      
+        while n--
+          .cube__face 
 
