--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,10 @@
 - var cubeList = ['react', 'vue', 'angular'];
 - var num = cubeList.length;
 
+
+a(class="btn") 
+  ="react"
+.container
   while num--
     - n = 6;
     div(class="cube "+cubeList[num])
